fix: firstname and lastname field names

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                 </div>
                 <div class="form_row">
                     <label for="name">first name</label>
-                    <input type="text" id="name" name="FIRSTNAME" placeholder="Enter your first name|" required>
+                    <input type="text" id="name" name="cd_FIRSTNAME" placeholder="Enter your first name|" required>
                     <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
                     <label for="surname">second name</label>
-                    <input type="text" id="surname" name="LASTNAME" placeholder="Enter your second name|" required>
+                    <input type="text" id="surname" name="cd_LASTNAME" placeholder="Enter your second name|" required>
                     <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
