--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
     n.queue=[];t=b.createElement(e);t.async=!0;
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.jshttps://connect.facebook.net/en_US/fbevents.js');
+    'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '589173868094653');
     fbq('track', 'PageView');
     </script>
     <noscript>
     <img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id={your-pixel-id-goes-here}&ev=PageView&noscript=1"/>
+        src="https://www.facebook.com/tr?id=589173868094653&ev=PageView&noscript=1"/>
     </noscript>
     <!-- End Facebook Pixel Code -->
 </body>
