feat: add video section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
                 <a href="#form" class="button">share your memory</a>
             </div>
 
+            <div class="video-section">
+                <div class="video-embed">
+                    <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/aXhMOlYlL4o?color=red&modestbranding=0&rel=0"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
             <h2>Globally, there are <span class="bright-text">43 million</span> people living with blindness and <span class="bright-text">295 million</span> people living with moderate-to-severe sight loss.
                 <span class="bright-text">3 out of 4 cases of blindness are completely treatable.</span></h2>
             <span class="marked-text">What is ‘I’d see’?</span>
