feat: update 'losing your sight' copy

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="intro">
                 <h2 class="intro_title">Losing your sight is emotionally traumatic and isolating.</h2>
                 <div class="intro_text">
-                    <p>We are Orbis: a charity that brings people together to fight avoidable blindness – and we are collecting memories of what people in the UK would want to see again if they lost their sight. We are sharing these memories on a public website for others to read, bringing us closer together to better understand the impact vision loss can have on children and adults in low income-countries.</p>
+                    <p>We are Orbis: a charity that brings people together to fight avoidable blindness – and we are collecting memories of what people in the UK would want to see again if they lost their sight. We are asking you to share your moments with us so we can share these memories across our channels for others to read, bringing us closer together to better understand the impact vision loss can have on children and adults in low income-countries.</p>
                 </div>
                 <a href="#form" class="button">share your memory</a>
             </div>
@@ -68,7 +68,7 @@
                     <iframe
                         width="560"
                         height="315"
-                        src="https://www.youtube.com/embed/aXhMOlYlL4o?color=red&modestbranding=0&rel=0"
+                        src="https://www.youtube.com/embed/aXhMOlYlL4o?cc_load_policy=1&amp;color=white&amp;rel=0"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
