feat: remove 'completely' from stat copy

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
 
             <h2>Globally, there are <span class="bright-text">43 million</span> people living with blindness and <span class="bright-text">295 million</span> people living with moderate-to-severe sight loss.
-                <span class="bright-text">3 out of 4 cases of blindness are completely treatable.</span></h2>
+                <span class="bright-text">3 out of 4 cases of blindness are treatable.</span></h2>
             <span class="marked-text">What is ‘I’d see’?</span>
 
             <div class="about">
