feat: add real YouTube video URL

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <iframe
                         width="560"
                         height="315"
-                        src="https://www.youtube.com/embed/aXhMOlYlL4o?cc_load_policy=1&amp;color=white&amp;rel=0"
+                        src="https://www.youtube.com/embed/v0cvbmtB1u8?cc_load_policy=1&amp;color=white&amp;rel=0"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
