chore: remove redundant cite attribute

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="quote-wrapper_top-corners"></div>
                 <div class="quote-wrapper_bottom-corners"></div>
                 <figure>
-                    <blockquote cite="https://developer.mozilla.org/samples/html/figure.html">
+                    <blockquote>
                         ‘Everywhere Orbis works, it leaves lasting change by training, educating and distributing knowledge and inspiring local teams to fight avoidable blindness in their own communities.’ 
                     </blockquote>
                     <figcaption>TOM DAVIES – EYE WEAR DESIGNER</figcaption>
