--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
             </div>
 
             <div class="video-section">
-                <div class="video-embed">
-                    <iframe
-                        width="560"
-                        height="315"
-                        src="https://www.youtube.com/embed/v0cvbmtB1u8?cc_load_policy=1&amp;color=white&amp;rel=0"
-                        title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <div class="video-section_container">
+                    <div class="video-embed">
+                        <iframe
+                            width="400"
+                            height="400"
+                            src="https://www.youtube.com/embed/v0cvbmtB1u8?cc_load_policy=1&amp;color=white&amp;rel=0"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
 
