--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6142409eb2f29e37"></script> 
     <!-- built files will be auto injected -->
   </body>
 </html>
