fix: add value to lang attribute

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en-gb">
   <head>
     <meta charset="utf-8">
-    <title>Orbis Uk - I'd see</title>  
+    <title>Orbis UK – I'd see</title>
     <meta content="We are an international eye care charity that saves people’s sight, giving them the chance to change their lives." name="description">
     <meta content="" name="keywords">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
