--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta content="telephone=no" name="format-detection">
     <meta name="HandheldFriendly" content="true">
+    <meta property="og:image" content="/img/slider-1.jpg"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
